<resources>
    <string name="app_name">tenstadoessecarai</string>
    <string name="adicionar_endere_o_adicional">Adicionar endereço adicional</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="endere_o">Endereço</string>
    <string name="endereço">Endereço</string>
    <string name="endereço_adicional">Endereço adicional</string>
    <string name="mini_currículo">Mini currículo</string>
    <string name="cadastrar">Cadastrar</string>
</resources>