<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:minHeight="48dp" />
        <LinearLayout
            android:id="@+id/address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endere_o"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereço"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endereço_adicional"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/additional_addresses_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/add_address_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_endere_o_adicional" />

        </LinearLayout>


        <EditText
            android:id="@+id/editTextCurriculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mini_currículo"
            android:lines="5"
            android:maxLines="5"
            android:maxLength="2000"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>
</layout>
